add preso changes

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@ data-background-size=contain == scales an image to the screen
 data-background-position=center == positions the image on the screen
 class="attribution" == image attribute
 <aside class="notes"></aside> == presenter notes
+<section data-background-iframe="https://instagantt.com/r#projects/5b9b1f3a088a5c4b40f56127/803635873740299" data-background-interactive>
+</section>
  -->
 <html>
 
@@ -47,19 +49,97 @@ class="attribution" == image attribute
 				<p>The material outcomes of socio-technical assemblages.</p>
 			</section>
 			<section>
-				<h2>Research Context</h2>
+				<h2>Topic</h2>
+				<p class="fragment">1900-1950 / 1950-2000 / 2000-2050</p>
+				<p class="fragment">Ontology of Data</p>
+				<p class="fragment">Data as a materiality</p>
+				<p class="fragment">Epistemology / Practice / Production</p>
+			</section>
+			<section data-background-image="lib\images\DigitalMaterialisms.png">
+				<h2><span>Research Context</span></h2>
+				<p class="fragment"><span>Datatisation / Datafication</span></p>
+				<p class="fragment"><span>Data-Driven</span></p>
+				<p class="fragment"><span>Data as a socio-technical assemblage</span></p>
+				<p class="fragment"><span>Space as a Information Technology (Easterling 2017)</span></p>
 			</section>
 			<section>
-				<h2>Question / Hypothesis</h2>
+				<h2>Aim</h2>
+				<p class="fragment">Sense Making</p>
+				<p class="fragment">Data and the cultural imagination</p>
+				<p class="fragment">Material Response</p>
 			</section>
 			<section>
-				<h2>Method - archival and case study</h2>
+				<h2>Main Question</h2>
+				<p class="fragment">“what is the relationship between the understanding and treatment of data in architectural practice and its material consequences within the built environment?”</p>
+			</section>
+
+			<section>
+				<h2>Method</h2>
+				<p class="fragment">Critical analysis of secondary sources</p>
+				<p class="fragment">Case study investigation</p>
+			</section>
+
+			<section>
+				<section>
+					<h2>Data Defined</h2>
+					<p class="fragment">Abstraction of reality</p>
+					<p class="fragment">Objective / Subjective lack of uniformity</p>
+					<p class="fragment">Building block of information and knowledge</p>
+					<p class="fragment">Data bound within a material and social assemblage</p>
+				</section>
+			</section>
+
+
+			<section>
+				<section data-background-image="\lib\images\Lecorbusier_modular.png" data-background-size=contain>
+					<h2><span>1900-1950 Static Data</span></h2>
+				</section>
+				<section data-background-image="\lib\images\Lecorbusier_proportion.png" data-background-size=contain>
+					<p class="fragment"><span>Data embedded into modernist style</span></p>
+				</section>
+				<section data-background-image="\lib\images\FrankfurtKitchen.png" data-background-size=contain>
+					<p class="fragment"><span>Aligned to scientific understanding of nature</span></p>
+				</section>
+				<section data-background-image="\lib\images\Weissenhof_Kitchen.png" data-background-size=contain>
+					<p class="fragment"><span>Data detected in the trusted use of economics</span></p>
+				</section>
+				<section data-background-image="\lib\images\neufert_body.png" data-background-size=contain>
+					<p class="fragment"><span>Practice influenced by the organisational capacity of the book as material substrate</span></p>
+				</section>
+				<section data-background-image="\lib\images\Bauentwurfslehre_book.png" data-background-size=contain>
+					<p class="fragment"><span>Mobilised via book as a cultural infrastructure</span></p>
+				</section>
+			</section>
+
+
+			<section>
+				<section data-background-image="\lib\images\HertzianSpace.png" data-background-size=contain>
+					<h2><span>2000-2050 Data as environment</span></h2>
+				</section>
+				<section>
+					<h2>Spatio-temporal assemblages</h2>
+					<p class="fragment">Data as materiality and material presence</p>
+					<p class="fragment">Data and scale</p>
+					<p class="fragment">Deformalisation and the thickened interface</p>
+					<p class="fragment">Data and the anthropocene</p>
+				</section>
 			</section>
 			<section>
-				<h2>Results so far</h2>
+				<section data-background-image="\lib\images\Lecorbusier_modular.jpg" data-background-size=contain>
+					<h2><span>1950-2000 Data as topology</span></h2>
+				</section>
+				<section>
+					<h2>Networked knowledge</h2>
+					<p class="fragment">Data and communication</p>
+					<p class="fragment">Data and the culture of consumption</p>
+					<p class="fragment">The Data of Beauborg</p>
+					<p class="fragment">Data and the class of 1980</p>
+				</section>
 			</section>
 			<section>
-				<h2>Timeline of research</h2>
+				<section>
+					<h2>Research Issues</h2>
+				</section>
 			</section>
 		</div>
 	</div>
