Add extra slides

--- a/index.html
+++ b/index.html
@@ -50,10 +50,10 @@ class="attribution" == image attribute
 			</section>
 			<section>
 				<h2>Topic</h2>
-				<p class="fragment">1900-1950 / 1950-2000 / 2000-2050</p>
-				<p class="fragment">Ontology of Data</p>
 				<p class="fragment">Data as a materiality</p>
+				<p class="fragment">Ontology of Data for Architecture</p>
 				<p class="fragment">Epistemology / Practice / Production</p>
+				<p class="fragment">1900-1950 / 1950-2000 / 2000-2050</p>
 			</section>
 			<section data-background-image="lib\images\DigitalMaterialisms.png">
 				<h2><span>Research Context</span></h2>
@@ -75,7 +75,7 @@ class="attribution" == image attribute
 
 			<section>
 				<h2>Method</h2>
-				<p class="fragment">Critical analysis of secondary sources</p>
+				<p class="fragment">Critical analysis of existing literature</p>
 				<p class="fragment">Case study investigation</p>
 			</section>
 
@@ -85,7 +85,7 @@ class="attribution" == image attribute
 					<p class="fragment">Abstraction of reality</p>
 					<p class="fragment">Objective / Subjective lack of uniformity</p>
 					<p class="fragment">Building block of information and knowledge</p>
-					<p class="fragment">Data bound within a material and social assemblage</p>
+					<p class="fragment">Data bound within material and social assemblages</p>
 				</section>
 			</section>
 
@@ -116,29 +116,39 @@ class="attribution" == image attribute
 				<section data-background-image="\lib\images\HertzianSpace.png" data-background-size=contain>
 					<h2><span>2000-2050 Data as environment</span></h2>
 				</section>
-				<section>
-					<h2>Spatio-temporal assemblages</h2>
-					<p class="fragment">Data as materiality and material presence</p>
-					<p class="fragment">Data and scale</p>
-					<p class="fragment">Deformalisation and the thickened interface</p>
-					<p class="fragment">Data and the anthropocene</p>
+				<section data-background-image="\lib\images\Data_Material_Rheology.png" data-background-size=contain>
+					<p class="fragment"><span>Data as materiality and material presence</span></p>
+				</section>
+				<section data-background-image="\lib\images\ExtendedSense.png" data-background-size=contain>
+					<p class="fragment"><span>Data and extended sense</span></p>
+				</section>
+				<section data-background-image="\lib\images\ThickenedInterface.png" data-background-size=contain>
+					<p class="fragment"><span>Deformalisation and the thickened interface</span></p>
+				</section>
+				<section data-background-image="\lib\images\Anthropocene.png" data-background-size=contain>
+					<p class="fragment"><span>Data and the anthropocene</span></p>
 				</section>
 			</section>
 			<section>
-				<section data-background-image="\lib\images\Lecorbusier_modular.jpg" data-background-size=contain>
+				<section data-background-image="\lib\images\Constance_topology.png" data-background-size=contain>
 					<h2><span>1950-2000 Data as topology</span></h2>
 				</section>
 				<section>
 					<h2>Networked knowledge</h2>
-					<p class="fragment">Data and communication</p>
+					<p class="fragment">Data as a signal</p>
 					<p class="fragment">Data and the culture of consumption</p>
-					<p class="fragment">The Data of Beauborg</p>
-					<p class="fragment">Data and the class of 1980</p>
+					<p class="fragment">The diagram of Beauborg</p>
+					<p class="fragment">Data and the class of 82</p>
 				</section>
 			</section>
 			<section>
 				<section>
 					<h2>Research Issues</h2>
+					<p class="fragment">Archival Access</p>
+					<p class="fragment">Suitable Epistemological framework</p>
+					<p class="fragment">Suitable Case Studies - process not object</p>
+					<p class="fragment">Question - Would autoethnography suitable to compare historical data practices?</p>
+					<p class="fragment">Question - Suitability of thesis structure?</p>
 				</section>
 			</section>
 		</div>
