--- a/index.html
+++ b/index.html
@@ -39,15 +39,20 @@ class="attribution" == image attribute
 <body>
 	<div class="reveal">
 		<div class="slides">
+			<!-- Front Page -->
 			<section>
 				<h1>Chris Bamborough</h1>
 				<h2>UTS DAB</h2>
 				<h3>Architecture</h3>
 			</section>
+
+			<!-- Thesis Title -->
 			<section>
 				<h2>Architecture and Data</h2>
 				<p>The material outcomes of socio-technical assemblages.</p>
 			</section>
+
+			<!-- Topic -->
 			<section>
 				<h2>Topic</h2>
 				<p class="fragment">Data as a materiality</p>
@@ -55,33 +60,41 @@ class="attribution" == image attribute
 				<p class="fragment">Epistemology / Practice / Production</p>
 				<p class="fragment">1900-1950 / 1950-2000 / 2000-2050</p>
 			</section>
+
+			<!-- Context -->
 			<section data-background-image="lib\images\DigitalMaterialisms.png">
 				<h2><span>Research Context</span></h2>
-				<p class="fragment"><span>Datatisation / Datafication</span></p>
+				<p class="fragment"><span>Data-ism</span></p>
 				<p class="fragment"><span>Data-Driven</span></p>
 				<p class="fragment"><span>Data as a socio-technical assemblage</span></p>
-				<p class="fragment"><span>Space as a Information Technology (Easterling 2017)</span></p>
+				<p class="fragment"><span>Space as a Information System (Easterling 2017)</span></p>
 			</section>
+
+			<!-- Research AIMS -->
 			<section>
 				<h2>Aim</h2>
 				<p class="fragment">Sense Making</p>
 				<p class="fragment">Data and the cultural imagination</p>
 				<p class="fragment">Material Response</p>
 			</section>
+
+			<!-- Main Research Questions -->
 			<section>
 				<h2>Main Question</h2>
-				<p class="fragment">“what is the relationship between the understanding and treatment of data in architectural practice and its material consequences within the built environment?”</p>
+				<p class="fragment">“what is the nature of data in architecture and is it detectable in the material products within the built environment?”</p>
 			</section>
 
+			<!-- Research Methods -->
 			<section>
 				<h2>Method</h2>
 				<p class="fragment">Critical analysis of existing literature</p>
 				<p class="fragment">Case study investigation</p>
 			</section>
 
+			<!-- Lens of data -->
 			<section>
 				<section>
-					<h2>Data Defined</h2>
+					<h2>Lens of Data</h2>
 					<p class="fragment">Abstraction of reality</p>
 					<p class="fragment">Objective / Subjective lack of uniformity</p>
 					<p class="fragment">Building block of information and knowledge</p>
@@ -89,35 +102,44 @@ class="attribution" == image attribute
 				</section>
 			</section>
 
-
+			<!-- Static Data -->
 			<section>
 				<section data-background-image="\lib\images\Lecorbusier_modular.png" data-background-size=contain>
 					<h2><span>1900-1950 Static Data</span></h2>
 				</section>
 				<section data-background-image="\lib\images\Lecorbusier_proportion.png" data-background-size=contain>
 					<p class="fragment"><span>Data embedded into modernist style</span></p>
+					<h6 class="attribution">LeCorbusier - Vers Une Architecture</h6>
 				</section>
 				<section data-background-image="\lib\images\FrankfurtKitchen.png" data-background-size=contain>
-					<p class="fragment"><span>Aligned to scientific understanding of nature</span></p>
+					<p class="fragment"><span>Aligned to efficiency and scientific understanding of nature</span></p>
+					<h6 class="attribution">Margarete Schutte-Lihotzky’s Frankfurt Kitchen</h6>
 				</section>
 				<section data-background-image="\lib\images\Weissenhof_Kitchen.png" data-background-size=contain>
-					<p class="fragment"><span>Data detected in the trusted use of economics</span></p>
+					<p class="fragment"><span>Pattern detected in the cultural idea of economy</span></p>
+					<h6 class="attribution">Case Study of WeissenhofSeidlung</h6>
 				</section>
 				<section data-background-image="\lib\images\neufert_body.png" data-background-size=contain>
 					<p class="fragment"><span>Practice influenced by the organisational capacity of the book as material substrate</span></p>
+					<h6 class="attribution">Neufert's Bauentwurfslehre</h6>
 				</section>
 				<section data-background-image="\lib\images\Bauentwurfslehre_book.png" data-background-size=contain>
 					<p class="fragment"><span>Mobilised via book as a cultural infrastructure</span></p>
+					<h6 class="attribution">Neufert's Bauentwurfslehre</h6>
 				</section>
 			</section>
 
-
+			<!-- Data Envronment -->
 			<section>
 				<section data-background-image="\lib\images\HertzianSpace.png" data-background-size=contain>
 					<h2><span>2000-2050 Data as environment</span></h2>
 				</section>
 				<section data-background-image="\lib\images\Data_Material_Rheology.png" data-background-size=contain>
 					<p class="fragment"><span>Data as materiality and material presence</span></p>
+					<h6 class="attribution">Rosa Menkman - Rheology of Data</h6>
+				</section>
+				<section data-background-image="\lib\images\Discrete.png" data-background-size=contain>
+					<h6 class="attribution">Giles Retsin - Discrete Assemblies</h6>
 				</section>
 				<section data-background-image="\lib\images\ExtendedSense.png" data-background-size=contain>
 					<p class="fragment"><span>Data and extended sense</span></p>
@@ -128,7 +150,12 @@ class="attribution" == image attribute
 				<section data-background-image="\lib\images\Anthropocene.png" data-background-size=contain>
 					<p class="fragment"><span>Data and the anthropocene</span></p>
 				</section>
+				<section data-background-image="\lib\images\NeuralAesthetic.png" data-background-size=contain>
+					<h6 class="attribution">Gene Kogan - Neural Aesthetic</h6>
+				</section>
 			</section>
+
+			<!-- Data Topology -->
 			<section>
 				<section data-background-image="\lib\images\Constance_topology.png" data-background-size=contain>
 					<h2><span>1950-2000 Data as topology</span></h2>
@@ -141,16 +168,30 @@ class="attribution" == image attribute
 					<p class="fragment">Data and the class of 82</p>
 				</section>
 			</section>
-			<section>
+
+			<!-- Conclusions -->
+				<section>
+					<h2>Conclusions</h2>
+					<p class="fragment">Fixed --> Flow --> Environment</p>
+					<p class="fragment">Body --> City --> Planetary</p>
+					<p class="fragment">Book --> Database --> Platform</p>
+					<p class="fragment">Stability --> Immaterial --> Temporal</p>
+				</section>
+
+			<!-- Research Issues -->
 				<section>
 					<h2>Research Issues</h2>
 					<p class="fragment">Archival Access</p>
 					<p class="fragment">Suitable Epistemological framework</p>
 					<p class="fragment">Suitable Case Studies - process not object</p>
-					<p class="fragment">Question - Would autoethnography suitable to compare historical data practices?</p>
-					<p class="fragment">Question - Suitability of thesis structure?</p>
 				</section>
-			</section>
+
+				<!-- Research Questions -->
+					<section>
+						<h2>Questions</h2>
+						<p class="fragment">Would autoethnography be a suitable method to understand and compare outcomes of historical data practices?</p>
+						<p class="fragment">Is the thesis structure suitable for PhD research ?</p>
+					</section>
 		</div>
 	</div>
 
