Add preso text changes

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ class="attribution" == image attribute
 			<!-- Front Page -->
 			<section>
 				<h1>Chris Bamborough</h1>
-				<h2>UTS DAB</h2>
+				<h2>The University of Technology</h2>
 				<h3>Architecture</h3>
 			</section>
 
@@ -96,7 +96,7 @@ class="attribution" == image attribute
 				<section>
 					<h2>Lens of Data</h2>
 					<p class="fragment">Abstraction of reality</p>
-					<p class="fragment">Objective / Subjective lack of uniformity</p>
+					<p class="fragment">Objective / Subjective detection</p>
 					<p class="fragment">Building block of information and knowledge</p>
 					<p class="fragment">Data bound within material and social assemblages</p>
 				</section>
@@ -108,23 +108,23 @@ class="attribution" == image attribute
 					<h2><span>1900-1950 Static Data</span></h2>
 				</section>
 				<section data-background-image="\lib\images\Lecorbusier_proportion.png" data-background-size=contain>
-					<p class="fragment"><span>Data embedded into modernist style</span></p>
+					<p><span>Data embedded into modernist style</span></p>
 					<h6 class="attribution">LeCorbusier - Vers Une Architecture</h6>
 				</section>
 				<section data-background-image="\lib\images\FrankfurtKitchen.png" data-background-size=contain>
-					<p class="fragment"><span>Aligned to efficiency and scientific understanding of nature</span></p>
+					<p><span>Aligned to efficiency and scientific understanding of nature</span></p>
 					<h6 class="attribution">Margarete Schutte-Lihotzky’s Frankfurt Kitchen</h6>
 				</section>
 				<section data-background-image="\lib\images\Weissenhof_Kitchen.png" data-background-size=contain>
-					<p class="fragment"><span>Pattern detected in the cultural idea of economy</span></p>
+					<p><span>Pattern detected in the cultural idea of economy</span></p>
 					<h6 class="attribution">Case Study of WeissenhofSeidlung</h6>
 				</section>
 				<section data-background-image="\lib\images\neufert_body.png" data-background-size=contain>
-					<p class="fragment"><span>Practice influenced by the organisational capacity of the book as material substrate</span></p>
+					<p><span>Practice influenced by the organisational capacity of the book as material substrate</span></p>
 					<h6 class="attribution">Neufert's Bauentwurfslehre</h6>
 				</section>
 				<section data-background-image="\lib\images\Bauentwurfslehre_book.png" data-background-size=contain>
-					<p class="fragment"><span>Mobilised via book as a cultural infrastructure</span></p>
+					<p><span>Mobilised via book as a cultural infrastructure</span></p>
 					<h6 class="attribution">Neufert's Bauentwurfslehre</h6>
 				</section>
 			</section>
@@ -135,22 +135,23 @@ class="attribution" == image attribute
 					<h2><span>2000-2050 Data as environment</span></h2>
 				</section>
 				<section data-background-image="\lib\images\Data_Material_Rheology.png" data-background-size=contain>
-					<p class="fragment"><span>Data as materiality and material presence</span></p>
+					<p><span>Data as materiality and material presence</span></p>
 					<h6 class="attribution">Rosa Menkman - Rheology of Data</h6>
 				</section>
 				<section data-background-image="\lib\images\Discrete.png" data-background-size=contain>
 					<h6 class="attribution">Giles Retsin - Discrete Assemblies</h6>
 				</section>
 				<section data-background-image="\lib\images\ExtendedSense.png" data-background-size=contain>
-					<p class="fragment"><span>Data and extended sense</span></p>
+					<p><span>Designing Data</span></p>
 				</section>
 				<section data-background-image="\lib\images\ThickenedInterface.png" data-background-size=contain>
-					<p class="fragment"><span>Deformalisation and the thickened interface</span></p>
+					<p><span>Deformalisation and the thickened interface</span></p>
 				</section>
 				<section data-background-image="\lib\images\Anthropocene.png" data-background-size=contain>
-					<p class="fragment"><span>Data and the anthropocene</span></p>
+					<p><span>Data and the anthropocene</span></p>
 				</section>
 				<section data-background-image="\lib\images\NeuralAesthetic.png" data-background-size=contain>
+					<p><span>Non-Human Epistemologies</span></p>
 					<h6 class="attribution">Gene Kogan - Neural Aesthetic</h6>
 				</section>
 			</section>
@@ -161,8 +162,7 @@ class="attribution" == image attribute
 					<h2><span>1950-2000 Data as topology</span></h2>
 				</section>
 				<section>
-					<h2>Networked knowledge</h2>
-					<p class="fragment">Data as a signal</p>
+					<p>Data as a signal</p>
 					<p class="fragment">Data and the culture of consumption</p>
 					<p class="fragment">The diagram of Beauborg</p>
 					<p class="fragment">Data and the class of 82</p>
@@ -170,28 +170,28 @@ class="attribution" == image attribute
 			</section>
 
 			<!-- Conclusions -->
-				<section>
-					<h2>Conclusions</h2>
-					<p class="fragment">Fixed --> Flow --> Environment</p>
-					<p class="fragment">Body --> City --> Planetary</p>
-					<p class="fragment">Book --> Database --> Platform</p>
-					<p class="fragment">Stability --> Immaterial --> Temporal</p>
-				</section>
+			<section>
+				<h2>Conclusions</h2>
+				<p class="fragment">Fixed --> Flow --> Environment</p>
+				<p class="fragment">Body --> City --> Planetary</p>
+				<p class="fragment">Book --> Database --> Platform</p>
+				<p class="fragment">Stability --> Immateriality --> Temporality</p>
+			</section>
 
 			<!-- Research Issues -->
-				<section>
-					<h2>Research Issues</h2>
-					<p class="fragment">Archival Access</p>
-					<p class="fragment">Suitable Epistemological framework</p>
-					<p class="fragment">Suitable Case Studies - process not object</p>
-				</section>
+			<section>
+				<h2>Research Issues</h2>
+				<p class="fragment">Archival Access</p>
+				<p class="fragment">Suitable Epistemological framework</p>
+				<p class="fragment">Suitable Case Studies - process not object</p>
+			</section>
 
-				<!-- Research Questions -->
-					<section>
-						<h2>Questions</h2>
-						<p class="fragment">Would autoethnography be a suitable method to understand and compare outcomes of historical data practices?</p>
-						<p class="fragment">Is the thesis structure suitable for PhD research ?</p>
-					</section>
+			<!-- Research Questions -->
+			<section>
+				<h2>Questions</h2>
+				<p class="fragment">Would autoethnography be a suitable method to understand and compare outcomes of historical data practices?</p>
+				<p class="fragment">Is the thesis structure suitable for PhD research ?</p>
+			</section>
 		</div>
 	</div>
 
